--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 venv/
 .env
 .flaskenv
+.vscode/
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -24,4 +25,6 @@ pyvenv.cfg
 .venv
 pip-selfcheck.json
 */__pycache__
-__pycache__/
+__pycache__/*
+
+migrations/*
