--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,12 @@ Jinja2==2.11.2
 Mako==1.1.3
 MarkupSafe==1.1.1
 pycodestyle==2.6.0
+PyMySQL==0.10.1
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 python-editor==1.0.4
 python-usernames==0.3.1
+random-username==1.0.2
 six==1.15.0
 SQLAlchemy==1.3.20
 toml==0.10.2
